# Brotli4j

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  README.md  SECURITY.md  pom.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: validate-native-binaries.sh
.github/workflows/: build-ci-images.yml  cicd-pipeline.yml  jekyll-gh-pages.yml  maven.yml  release.yml
all/: pom.xml
bom/: pom.xml
brotli/common/: platform.h
brotli/tools/: brotli.md
brotli4j/: pom.xml
brotli4j-tests/: pom.xml
docker/: Dockerfile  Dockerfile.centos6  Dockerfile11  Dockerfile11.centos6  Dockerfile17  Dockerfile17.centos6  Dockerfile21  Dockerfile21.centos6  docker-compose.yml  docker-compose11.yml  docker-compose17.yml  docker-compose21.yml  install-qemu.sh  merge-builds.sh
docker-ci/aarch64/centos7-jdk11/: Dockerfile
docker-ci/aarch64/centos7-jdk17/: Dockerfile
docker-ci/aarch64/centos7-jdk21/: Dockerfile
docker-ci/aarch64/centos7-jdk8/: Dockerfile
docker-ci/aarch64/ubuntu1804-jdk11/: Dockerfile
docker-ci/aarch64/ubuntu1804-jdk17/: Dockerfile
docker-ci/aarch64/ubuntu1804-jdk8/: Dockerfile
docker-ci/aarch64/ubuntu2004-jdk21/: Dockerfile
docker-ci/armv7/debian11-jdk11/: Dockerfile
docker-ci/armv7/debian11-jdk17/: Dockerfile
docker-ci/armv7/debian11-jdk8/: Dockerfile
docker-ci/armv7/ubuntu1804-jdk11/: Dockerfile
docker-ci/armv7/ubuntu1804-jdk17/: Dockerfile
docker-ci/armv7/ubuntu1804-jdk8/: Dockerfile
docker/centosbuild/: Dockerfile  setup-repo.sh
docker/completebuild/: Dockerfile
docker/test/: Dockerfile
natives/: pom.xml
natives/linux-aarch64/: build.sh  pom.xml
natives/linux-armv7/: build.sh  pom.xml
natives/linux-loongarch64/: build.sh  pom.xml
natives/linux-ppc64le/: build.sh  pom.xml
natives/linux-riscv64/: build.sh  pom.xml
natives/linux-s390x/: build.sh  pom.xml
natives/linux-x86/: build.sh  pom.xml
natives/linux-x86_64/: build.sh  pom.xml
natives/linux_x86-64/: build.sh  pom.xml
natives/macos_x86-64/: build.sh  pom.xml
natives/osx-aarch64/: build.sh  pom.xml
natives/osx-x86_64/: build.sh  pom.xml
natives/windows-aarch64/: build.bat  pom.xml
natives/windows-armv7/: build.bat  pom.xml
natives/windows-x86/: build.bat  pom.xml
natives/windows-x86_64/: build.bat  pom.xml
natives/windows_x86-64/: build.bat  pom.xml
service/: pom.xml
(+83 files in other folders)
